# ts_microservice_generator

./: Cargo.toml  LICENSE  README.md  generate.sh
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/commands/: clean_code.rs  generate.rs  hexagonal.rs  mod.rs  saga.rs
src/templates/: package.json.tera
src/templates/clean_code/: package.json.tera  tsconfig.json.tera
src/templates/hexagonal/: package.json.tera
src/templates/saga/: package.json.tera
src/utils/: fs_utils.rs
templates/: tsconfig.json.tera
tests/: clean_code.rs  generate.rs  hexagonal.rs  integration_tests.rs  saga.rs
