[package]
name = "ts_microservice_generator"
version = "1.0.1"
authors = ["CodewiseTech <dev@codewisetech.biz>"]
edition = "2021"
description = "A CLI tool to generate TypeScript microservice projects."
license = "MIT"
repository = "https://github.com/codewise-technologies/ts_microservice_generator"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
clap = "4.5.6"
tera = "1.20.0"

[workspace]

[[bin]]
name = "ts_microservice_generator"
path = "src/bin/main.rs"